modification de la couleur du lien dans contact et correction de la description de limonade dans index

--- a/style.css
+++ b/style.css
@@ -288,6 +288,14 @@ main {
           max-width: 100%;
           box-sizing: border-box;
 
+          a {
+            color: var(--argentina);
+
+            &:hover {
+              color: var(--blackpink);
+            }
+          }
+
           
 
           fieldset  {
